--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="./main.js" defer></script>
 </head>
 <body>
-    
+    <div class="primary-container">
+        
+    </div>
 </body>
 </html>
