added title and add book button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
     <div class="primary-container">
-        
+        <div class="header-container">
+            <div class="header-title">My Library!</div>
+            <div class="header-button-container">
+                <button>Add Book</button>
+            </div>
+        </div>
+        <div class="content-container">
+            Wow!
+        </div>
     </div>
 </body>
 </html>
