added example book-card

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
             </div>
         </div>
         <div class="content-container">
-            Wow!
+            <div class="book-card">
+                <div class="book-title">Big ol' bitties</div>
+                <div class="book-author">P-diddy</div>
+                <div class="book-page-count">3</div>
+                <div class="book-has-read">False</div>
+            </div>
         </div>
     </div>
 </body>
