--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,27 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./main.js" defer></script>
 </head>
+
 <body>
+    <div class="book-input-modal hidden">
+        <div class="modal-title-container">
+            <div class="modal-title">Add / Edit Book</div>
+            <button id="exit-button">X</button>
+        </div>
+        <label for="title">Title</label><input name="title" type="text">
+        <label for="author">Author</label><input name="author" type="text">
+        <label for="pages">Page Count</label><input name="pages" type="number">
+        <label for="hasRead">Read?</label><input name="hasRead" type="checkbox">
+        <div class="modal-button-container">
+            <button id="cancel-button">Cancel</button>
+            <button id="save-button">Save</button>
+        </div>
+    </div>
     <div class="primary-container">
         <div class="header-container">
             <div class="header-title">My Library!</div>
             <div class="header-button-container">
-                <button>Add Book</button>
+                <button id="add-book">Add Book</button>
             </div>
         </div>
         <div class="content-container">
@@ -22,7 +38,21 @@
                 <div class="book-page-count">3</div>
                 <div class="book-has-read">False</div>
             </div>
+            <div class="book-card">
+                <div class="book-title">Big ol' bitties</div>
+                <div class="book-author">P-diddy</div>
+                <div class="book-page-count">3</div>
+                <div class="book-has-read">False</div>
+            </div>
+            <div class="book-card">
+                <div class="book-title">Big ol' bitties</div>
+                <div class="book-author">P-diddy</div>
+                <div class="book-page-count">3</div>
+                <div class="book-has-read">False</div>
+            </div>
+
         </div>
     </div>
 </body>
+
 </html>
