added drop shadow to popup modal to better contrast

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="modal-title">Add / Edit Book</div>
             <button id="exit-button">X</button>
         </div>
-        <label for="title">Title</label><input name="title" type="text">
-        <label for="author">Author</label><input name="author" type="text">
-        <label for="pages">Page Count</label><input name="pages" type="number">
-        <label for="hasRead">Read?</label><input name="hasRead" type="checkbox">
+        <label for="title">Title</label><input id="title-input" name="title" type="text">
+        <label for="author">Author</label><input id="author-input" name="author" type="text">
+        <label for="pages">Page Count</label><input id="pages-input" name="pages" type="number">
+        <label for="hasRead">Read?</label><input id="read-input" name="hasRead" type="checkbox">
         <div class="modal-button-container">
             <button id="cancel-button">Cancel</button>
             <button id="save-button">Save</button>
