--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="header-container">
             <div class="header-title">My Library!</div>
             <div class="header-button-container">
-                <button id="add-book">Add Book</button>
+                <button id="add-book">New Book</button>
             </div>
         </div>
         <div class="content-container">
